1995-09-21  Thomas E. Dickey  <dickey@clark.net>

	* src/link2rcs/src/link2rcs.c:
	changed to allow -F option (hard-link to files if possible)

	* src/link2rcs/src/link2rcs.c: module-id

1995-05-13  Thomas E. Dickey  <dickey@clark.net>

	* src/copy/src/copy.c: change interface to setmtime()

	* src/copy/src/copy.c: module-id

	* support/set_date.c: change interface to setmtime

1995-01-28  Thomas E. Dickey  <dickey@clark.net>

	* src/vcs/src/Makefile, src/vcs/Makefile, src/permit/src/Makefile, src/permit/Makefile, support/Makefile:
	renamed-test-rule

	* src/copy/src/copy.c:
	if the target's already got an s-bit set (i.e., as a side-effect of mkdir),
	keep it also.

	* src/copy/src/copy.c: retain s-bits in destination directory

	* src/checkup/src/checkup.c: I guess I _need_ IOBF definition!

	* src/checkup/src/checkup.c, src/checkin/src/checkin.c: module-id

	* src/checkin/src/checkin.c: portability-ifdef

	* src/checkup/src/checkup.c: fixed ifdef's for setbuf

1994-11-12  Thomas E. Dickey  <dickey@clark.net>

	* src/checkout/src/checkout.c: module-id

	* src/checkout/src/checkout.c: pass-thru options -f, -k to 'co'.
	modified to make this a little smarter when reporting that a checkout didn't
	happen.

	* src/checkout/src/rcsget.c:
	corrected call on Checkout within walktree (wasn't converting archive name
	to working).  Also, pass-thru -f, -k options (i.e., 'co' in version 5.6.7)

	* src/checkout/src/rcsget.c: module-id

1994-11-08  Thomas E. Dickey  <dickey@clark.net>

	* src/checkup/src/checkup.c:
	added checks to (try to!) recognize when stderr/stdout may be non-tty at
	the same time due to running in batch-mode

	* certify/config.txt: obsoleted lincnt

	* certify/release.txt: note about CmVision
